2008-01-12  Philip Van Hoof <pvanhoof@gnome.org>

	* Merged camel-lite with Camel upstream rev. 835
	* Added an extra check around a strcmp that seems to have caused a 
	crash once

2008-01-11  Philip Van Hoof <pvanhoof@gnome.org>

	* Preparations for the new summary store
	* Made all remaining static libraries LTLIBRARIES
	* Fixed compiler warnings

2008-01-11 Alberto Garcia Gonzalez <agarcia@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c:
	fix typo that caused a compilation error

2008-01-10 Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
	
	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store-summary:
	fix typo in camel-imap-store-summary.c which caused valgrind errors

2008-01-09  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.c:
	(creater): added some checks in order to properly detect the parent of
	the newly created folder

2008-01-09  Dirk-Jan C. Binnema <dirk-jan.binnema@nokia.com>
	
	* small fixes / cleanups for tny-maemo-conic-device

2008-01-08  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-maemo/tny-maemo-conic-device.c: fixed an invalid g_free
	over a previously freed field of a struct

2007-12-30  Philip Van Hoof <pvanhoof@gnome.org>

	* Performance enhancements
	* Bugfix for the bodystructure parser and per-MIME-part fetching
	* Experimental performance improvement in tny-gtk-header-list-model.c

2007-12-27  Philip Van Hoof <pvanhoof@gnome.org>

	* Updates from Camel upstream, rfc 2047 decoder

2007-12-26  Philip Van Hoof <pvanhoof@gnome.org>

	* Committed Jeffrey Stedfast's patch for Camel upstream to
	camel-mime-utils.c and camel-charset-map.c
	More information here:
	http://mail.gnome.org/archives/evolution-hackers/2007-December/msg00079.html

2007-12-24  Philip Van Hoof <pvanhoof@gnome.org>

	* Merging with Camel upstream
	* When offline, folders in namespace that had a parent that was not
	subscribed, were not accessible. This was because the parents where